# tidaw

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
example/: App.tsx  index.css
example/PianoRoll/: PianoRoll.tsx  index.ts
example/Property/: Property.tsx
example/StatusBar/: StatusBar.tsx
example/Timeline/: Timeline.tsx
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs  utils.rs
src/: App.tsx  Load.ts  README.md  TimeLineMange.ts  index.css
src/_Screens/: MainLayout.tsx  index.ts
src/_Screens/PianoRoll/: NoteRenderer.tsx  PianoGrid.tsx  PianoKeys.tsx  PianoRoll.tsx  PianoRollFooter.tsx  PianoRollHeader.tsx  constants.ts  index.ts  types.ts  utils.ts  wasmApi.ts
src/_Screens/Property/: ClipProperties.tsx  EffectProperties.tsx  MasterProperties.tsx  Property.tsx  PropertySelector.tsx  README.md  TrackProperties.tsx  index.ts  types.ts  wasmApi.ts
src/_Screens/StatusBar/: README.md  StatusBar.tsx  TempoControl.tsx  TimeDisplay.tsx  TransportControls.tsx  UtilityControls.tsx  VolumeControl.tsx  index.ts  types.ts  wasmApi.ts
src/_Screens/Timeline/: Timeline.tsx  TimelineGrid.tsx  TimelineHeader.tsx  TrackHeaders.tsx  constants.ts  types.ts  utils.ts  wasmApi.ts
src/components/: Button.tsx  Header.tsx  WasmDemo.tsx
src/hooks/: useToggle.ts
src/types/: index.ts
src/utils/: Save.ts  SoundGenerate.ts  TimeLineMange.ts  helpers.ts
